--- a/src/component/EffectPlayer/EffectPlayer.module.css
+++ b/src/component/EffectPlayer/EffectPlayer.module.css
@@ -1,10 +1,36 @@
 .videofx {
-  position: absolute;
+  position: relative;
   top: 0;
   left: 0;
   display: flex;
-  justify-content: center;
-  align-items: center;
   height: 100%;
   width: 100%;
+}
+
+.h-left {
+  justify-content: flex-start;
+}
+
+.h-center {
+  justify-content: center;
+}
+
+.h-right {
+  justify-content: flex-end;
+}
+
+.v-top {
+  align-items: flex-start;
+}
+
+.v-center {
+  align-items: center;
+}
+
+.v-bottom {
+  align-items: flex-end;
+}
+
+.video-player {
+  position: relative;
 }
