--- a/src/App.css
+++ b/src/App.css
@@ -19,3 +19,14 @@
   justify-content: center;
   align-items: center;
 }
+
+.video-player-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
